--- a/ui/app/templates/base.jinja2
+++ b/ui/app/templates/base.jinja2
@@ -8,7 +8,7 @@
     <title>refinance</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.css?1232103021">
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
 </head>
 
