--- a/ui/app/templates/entity/card_delete.jinja2
+++ b/ui/app/templates/entity/card_delete.jinja2
@@ -1,10 +1,10 @@
 {% extends 'base.jinja2' %}
-{% from 'form.jinja2' import render_form %}
 
 {% block title %}Delete card #{{ card.id }} from entity {{ entity_id }} cards?{% endblock %}
 
 {% block content %}
 <form method="post">
-    {{ render_form(form) }}
+    {{ form.hidden_tag() }}
+    {{ form.delete(class_='big-button big-button-outline big-button-danger-outline big-button-inline') }}
 </form>
 {% endblock %}
