--- a/ui/app/templates/treasury/delete.jinja2
+++ b/ui/app/templates/treasury/delete.jinja2
@@ -1,11 +1,11 @@
 {% extends 'base.jinja2' %}
-{% from 'form.jinja2' import render_form %}
 
 {% block title %}Delete Treasury <span class="{% if not treasury.active %}secondary inactive{% endif %}">{{
     treasury.name }}</span>?{% endblock %}
 
 {% block content %}
 <form method="post">
-    {{ render_form(form) }}
+    {{ form.hidden_tag() }}
+    {{ form.delete(class_='big-button big-button-outline big-button-danger-outline big-button-inline') }}
 </form>
 {% endblock %}
